Fix image scale on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 .card-image > img {
     height: 40vh;
 }
+
+@media screen and (max-width: 800px) {
+    .card-image > img {
+        height: 250px;
+    }
+}
